Updating the Site ngl

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome To Astro AntiCheat Github Page
+description: Use this page to download the Anti Cheat/Learn commands for it 
