--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"format_version": 1,
 	"header": {
-		"name": "Astro Antichear",
-		"description": "Best Bedrock Anticheat \n Made By Astro",
+		"name": "Astro Anticheat",
+		"description": "Best Bedrock Anticheat \nMade By Astro",
 		"uuid": "b77a1dc3-7a77-4d90-a36c-cdba1e326808",
 		"version": [
 			1,
