random ass commits

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"format_version": 1,
 	"header": {
 		"name": "Astro Anticheat",
-		"description": "Best Bedrock Anticheat \nMade By Astro",
+		"description": "Bedrock Anticheat\nMade By Astro",
 		"uuid": "b77a1dc3-7a77-4d90-a36c-cdba1e326808",
 		"version": [
 			1,
