--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,23 @@
 {
 	"format_version": 1,
+	"dependencies": [
+		{
+			"uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
+			"version": [
+				0,
+				1,
+				0
+			]
+		},
+		{
+			"uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
+			"version": [
+				0,
+				1,
+				0
+			]
+		}
+	],
 	"header": {
 		"name": "Astro Anticheat",
 		"description": "Bedrock Anticheat\nMade By Astro",
@@ -24,6 +42,17 @@
 				1,
 				7
 			]
+		},
+		{
+			"description": "Script that implements basic starter tests.",
+			"type": "javascript",
+			"uuid": "1A1B53FC-5653-4A76-91B7-9CDF027674AE",
+			"version": [
+				0,
+				0,
+				1
+			],
+			"entry": "scripts/index.js"
 		}
 	]
 }
