--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,16 @@
 		{
 			"uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
 			"version": [
-				0,
 				1,
+				0,
 				0
 			]
 		},
 		{
 			"uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
 			"version": [
-				0,
 				1,
+				0,
 				0
 			]
 		}
@@ -52,8 +52,7 @@
 				0,
 				1
 			],
-			"entry": "scripts/index.js",
-			"entry": "scripts/main.js"
+			"entry": "scripts/index.js"
 		}
 	]
 }
