--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,21 @@
             "type": "mcf",
             "request": "launch",
             "name": "Start Debugging",
+            "port": 1453
+        },
+        {
+            "type": "minecraft-js",
+            "request": "attach",
+            "name": "Attach to Minecraft",
+            "mode": "connect",
+            "localRoot": "${workspaceFolder}/main.js",
+            "host": "localhost",
+            "port": 19144
+        },
+        {
+            "type": "mcf",
+            "request": "launch",
+            "name": "Start Debugging",
             "port": 1453,
             "features": [
                 "--stopOnException"
