--- a/bh/manifest.json
+++ b/bh/manifest.json
@@ -1,40 +1,38 @@
 {
 	"format_version": 2,
-	"header": {
-		"name": "    Astro Anticheat    ",
-		"description": "§0Made By: Astro",
-		"uuid": "c68ba0c1-b9e4-46ad-b6c8-88bbd28f1fa5",
-		"version": [2, 0, 7],
-		"min_engine_version": [1, 16, 210]
-	},
 	"metadata": {
-		"authors": ["AstroOntTop"],
-		"url": "https://github.com/astroontop/Astro-Anticheat"
+		"authors": [
+			"Astro"
+		],
+		"generated_with": {
+			"bridge": [
+				"2.1.5"
+			]
+		}
 	},
-	"modules": [{
+	"header": {
+		"name": "     Astro Anticheat     ",
+		"description": "§4ANTICHEAT §cfor stopping most forms of CBE  §7Turn on all Experimental GamePlay§r",
+		"min_engine_version": [
+			1,
+			17,
+			0
+		],
+		"uuid": "c6e2b7c4-7590-471d-916c-7d462517db32",
+		"version": [
+			1,
+			0,
+			5
+		]
+	},
+	"modules": [
+		{
 			"type": "data",
-			"uuid": "d059cc96-9272-4a33-90c8-f572bcc7fa56",
+			"uuid": "f8250cc9-58e2-422f-9aac-eab93caa058a",
 			"version": [
 				1,
 				0,
 				0
 			]
-		},
-		{
-			"description": "Astrp AntiCheat Gametest Features",
-			"type": "javascript",
-			"uuid": "ab31620b-f498-4355-9bea-498922f5940e",
-			"version": [0, 0, 1],
-			"entry": "scripts/main.js"
-		}
-	],
-	"dependencies": [{
-			"uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
-			"version": [0, 1, 0]
-		},
-		{
-			"uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
-			"version": [0, 1, 0]
 		}
 	]
-}
