--- a/rp/manifest.json
+++ b/rp/manifest.json
@@ -1,19 +1,39 @@
 {
-    "format_version" : 2,
-    "header" : {
-       "description" : "§0Made By: Astro",
-       "name" : "    Astro Anticheat    ",
-       "uuid" : "533a2843-a5cb-4100-9a2c-dbc512607e69",
-       "version" : [ 2, 1, 1 ],
-       "min_engine_version": [ 1, 16, 0 ]
-    },
-    "modules" : [
-       {
-          "description" : "§0Made By: Astro",
-          "type" : "resources",
-          "uuid" : "6dc54b29-8401-48f4-91e6-2b547dc34ee1",
-          "version" : [ 2, 1, 1 ]
-       }
-    ]
- }
- 
+	"format_version": 2,
+	"metadata": {
+		"authors": [
+			"Astro"
+		],
+		"generated_with": {
+			"bridge": [
+				"2.1.5"
+			]
+		}
+	},
+	"header": {
+		"name": "    Astro Anticheat     ",
+		"description": "§4ANTICHEAT §cfor stopping most forms of CBE  §7Turn on all Experimental GamePlay§r",
+		"min_engine_version": [
+			1,
+			17,
+			0
+		],
+		"uuid": "16332704-8720-4207-92cc-35dc194b4ec9",
+		"version": [
+			1,
+			0,
+			5
+		]
+	},
+	"modules": [
+		{
+			"type": "resources",
+			"uuid": "194ac104-3221-4824-9312-b2931a23d430",
+			"version": [
+				1,
+				0,
+				0
+			]
+		}
+	]
+}
