--- a/bh/manifest.json
+++ b/bh/manifest.json
@@ -1,39 +1,36 @@
 {
 	"format_version": 2,
-	"metadata": {
-		"authors": [
-			"Astro"
-		],
-		"generated_with": {
-			"bridge": [
-				"2.1.5"
-			]
-		}
-	},
 	"header": {
-		"name": "     Astro Anticheat     ",
-		"description": "§4ANTICHEAT §cfor stopping most forms of CBE  §7Turn on all Experimental GamePlay§r",
-		"min_engine_version": [
-			1,
-			17,
-			0
-		],
-		"uuid": "c6e2b7c4-7590-471d-916c-7d462517db32",
-		"version": [
-			1,
-			0,
-			5
-		]
+		"name": "    Astro Anticheat    ",
+		"description": "§0Made By: Astro",
+		"uuid": "f549788e-b3f1-18d4-7f7d-d85457f35178",
+		"version": [1, 0, 0],
+		"min_engine_version": [1, 17, 0]
 	},
-	"modules": [
-		{
+	"modules": [{
 			"type": "data",
-			"uuid": "f8250cc9-58e2-422f-9aac-eab93caa058a",
+			"uuid": "e13393ec-7555-874a-10d7-47aedaad2854",
 			"version": [
 				1,
 				0,
 				0
 			]
+		},
+		{
+			"description": "Astro AntiCheat",
+			"type": "javascript",
+			"uuid": "bfdcd307-eaa3-4cc4-bae6-0dde4178d41b",
+			"version": [0, 0, 1],
+			"entry": "scripts/modules/main.js"
+		}
+	],
+	"dependencies": [{
+			"uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
+			"version": [0, 1, 0]
+		},
+		{
+			"uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
+			"version": [0, 1, 0]
 		}
 	]
 }
